add Activity about us from MainActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,21 @@
     <string name="vk"><a href="https://vk.me/join/AJQ1dxSPjSPs_1X5AHsBqPnf">Группа в VK</a> </string>
     <string name="wtsapp"><a href="https://chat.whatsapp.com/DcYXYr39xVLEbu9wGQtB5u">Группа в WhatsApp</a> </string>
     <string name="tg"><a href="https://t.me/kazanpoet">Группа в tg</a> </string>
+    <string name="aboutUsActivity">О нас</string>
+    <string name="InfoAboutUs">
+        «Казань поёт» – онлайн-радио, где круглосуточно
+        звучит музыка артистов, которые считают своей
+        родиной город Казань или всю солнечную Татарию.\n\n
+        Челны, Альметьевск, Актаныш, Буинск, все остальные
+        города республики и конечно, столица Казань - все
+        самые крутые музыканты представляют свои лучшие песни
+        на онлайн-радио Казань поёт. Здесь играют хиты тех
+        артистов, которые живут по соседству, и на концерты
+        которых вы можете попасть в любой момент.
+        Музыкантам и слушателям больше не надо искать друг
+        друга - все мы встречаемся на онлайн-радио «Казань поёт».\n\n
+        Слушайте наших! Поддержите наших!
+        Делитесь информацией о нас со всеми, кого вы знаете!
+        Чем больше нас, тем ярче наши звезды!</string>
+
 </resources>
