add buttons in notification

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,6 +18,7 @@
     <string name="wtsapp"><a href="https://chat.whatsapp.com/DcYXYr39xVLEbu9wGQtB5u">Группа в WhatsApp</a> </string>
     <string name="tg"><a href="https://t.me/kazanpoet">Группа в tg</a> </string>
     <string name="aboutUsActivity">О нас</string>
+    <string name="Pause">Pause</string>
     <string name="InfoAboutUs">
         «Казань поёт» – онлайн-радио, где круглосуточно
         звучит музыка артистов, которые считают своей
