--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,7 @@
     <string name="InfoAboutUs">
         «Казань поёт» – онлайн-радио, где круглосуточно
         звучит музыка артистов, которые считают своей
-        родиной город Казань или всю солнечную Татарию.\n\n
+        родиной город Казань или всю солнечную Татарию.
         Челны, Альметьевск, Актаныш, Буинск, все остальные
         города республики и конечно, столица Казань - все
         самые крутые музыканты представляют свои лучшие песни
@@ -30,7 +30,7 @@
         артистов, которые живут по соседству, и на концерты
         которых вы можете попасть в любой момент.
         Музыкантам и слушателям больше не надо искать друг
-        друга - все мы встречаемся на онлайн-радио «Казань поёт».\n\n
+        друга - все мы встречаемся на онлайн-радио «Казань поёт».
         Слушайте наших! Поддержите наших!
         Делитесь информацией о нас со всеми, кого вы знаете!
         Чем больше нас, тем ярче наши звезды!</string>
