--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,9 @@
     <string name="_1">Дорожка 1</string>
     <string name="loading">...</string>
     <string name="share_body">Слушайте первое музыкальное онлайн-радио в Татарстане.
-        Здесь звучат песни, которые больше нигде не звучат.</string>
+        Здесь звучат песни, которые больше нигде не звучат.
+        https://play.google.com/store/apps/details?id=com.kazan.radiosings
+    </string>
     <string name="share">share</string>
     <string name="aboutUs">about Us</string>
     <string name="Contacts">Контакты</string>
@@ -18,7 +20,7 @@
     <string name="wtsapp"><a href="https://chat.whatsapp.com/DcYXYr39xVLEbu9wGQtB5u">Группа в WhatsApp</a> </string>
     <string name="tg"><a href="https://t.me/kazanpoet">Группа в tg</a> </string>
     <string name="aboutUsActivity">О нас</string>
-    <string name="share_googleplay_link">www.googleplay.ru</string>
+    <string name="share_googleplay_link">0</string>
     <string name="Pause">Pause</string>
     <string name="InfoAboutUs">
         «Казань поёт» – онлайн-радио, где круглосуточно
